--- a/config-dev.yml
+++ b/config-dev.yml
@@ -3,5 +3,5 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
       
-config:
-  info: version-1
+server:
+  port: 3356
