--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,7 +1,11 @@
+      
+server:
+  port: 3355
+
+config:
+  info: 'version 1'
 eureka:
   client:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/
-      
-server:
-  port: 3355
+
